--- a/static/scss/_header.scss
+++ b/static/scss/_header.scss
@@ -2,6 +2,7 @@ header {
   width: 100%;
   box-sizing: border-box;
   padding: 1em;
+  margin-bottom: 1em;
   background-color: $base2;
 
   box-shadow: inset 0 3px 5px $base1;
